test/assets/invalid/signatures/expect-bool-list.hs
a :: [Int]
a = [True, True, True]